--- a/app/pages/case_detail/index.njk
+++ b/app/pages/case_detail/index.njk
@@ -9,10 +9,16 @@
 {% set page = "" %}
 
 {# Breadcrumb #}
-{% set breadcrumb = [{
+{% set breadcrumb = [
+{
+head:"TOP",
+link:"/"
+},
+{
 text:"導入事例",
 link:"/case"
-},{
+},
+{
 text:"ETCカードの導入で毎月の経費計算処理の手間と時間が削減！",
 link:"#"
 }] %}
