--- a/app/pages/case_list/index.njk
+++ b/app/pages/case_list/index.njk
@@ -10,9 +10,13 @@
 
 {# Breadcrumb #}
 {% set breadcrumb = [{
-  text:"導入事例",
-  link:"#"
-  }] %}
+head:"TOP",
+link:"/"
+},
+{
+text:"導入事例",
+link:"#"
+}] %}
 
 {# Custom tags before </head> #}
 {% block customHead %}{% endblock %}
@@ -223,7 +227,7 @@
                   <br>
                   お気軽にお問い合わせください。
                 </div>
-                <div><a  class="blue_gradient_btn" href="/contact/">ご相談・お問い合わせ</a></div>
+                <div><a class="blue_gradient_btn" href="/contact/">ご相談・お問い合わせ</a></div>
               </summary>
             </div>
           </div>
