--- a/app/pages/cospro/index.njk
+++ b/app/pages/cospro/index.njk
@@ -17,6 +17,10 @@
 {# Breadcrumb #}
 {% set breadcrumb = [
   {
+    head: "TOP",
+    link: "/"
+  },
+  {
     text: "CosPro",
     link: "#"
   }
