--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -11,6 +11,10 @@
 {# Breadcrumb #}
 {% set breadcrumb = [
   {
+    text: "TOP",
+    link: "/"
+  },
+  {
     text: "セゾンインボイス",
     link: "#"
   }
