--- a/app/pages/saison_welfare/index.njk
+++ b/app/pages/saison_welfare/index.njk
@@ -11,6 +11,10 @@
 {# Breadcrumb #}
 {% set breadcrumb = [
 {
+head:"TOP",
+link:"/"
+},
+{
 text:"セゾンフクリコ",
 link:"/saison_welfare"
 }
@@ -315,7 +319,7 @@ link: "#material"
                     <div class="muted"> 東京ドームシティ得10チケット 1冊最大6,000円相当が</span><span class="special">2,790円(税込)</span>
                     </div>
                   </div>
-                </a>
+                  </a>
               </li>
               <li>
                 <div class="card">
@@ -598,7 +602,7 @@ link: "#material"
                 <div class="card__box--ttl">サービス内容について詳しく知りたい方はこちら</div>
                 <div class="card__box--cont">
                   <div class="card__box--image">
-                    <img src="/assets/img/payment_com/payment_contact2.png"/>
+                    <img src="/assets/img/payment_com/payment_contact2.png" />
                   </div>
                   <div class="card__box--txt">
                     セゾンフクリコのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
@@ -606,24 +610,24 @@ link: "#material"
                 </div>
                 <div><a class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
               </summary>
-          </div>
-          <div href="#" class="card">
-            <summary class="card__box">
-              <div class="card__box--ttl">営業担当に相談・お問い合わせをしたい方はこちら</div>
-              <div class="card__box--cont">
+            </div>
+            <div href="#" class="card">
+              <summary class="card__box">
+                <div class="card__box--ttl">営業担当に相談・お問い合わせをしたい方はこちら</div>
+                <div class="card__box--cont">
                   <div class="card__box--image">
-                    <img src="/assets/img/common/contact_inner2.png"/>
+                    <img src="/assets/img/common/contact_inner2.png" />
                   </div>
                   <div class="card__box--txt">
                     導入にあたってのご相談や、各種優待サービスなどをご紹介させていただきます。
                   </div>
                 </div>
-              <div><a class="blue_gradient_btn" href="/contact/">導入のご相談・お問い合わせ（無料）</a></div>
-            </summary>
+                <div><a class="blue_gradient_btn" href="/contact/">導入のご相談・お問い合わせ（無料）</a></div>
+              </summary>
+            </div>
           </div>
         </div>
       </div>
-    </div>
   </section>
 </main>
 {% endblock %}
