--- a/app/pages/seminar_form/index.njk
+++ b/app/pages/seminar_form/index.njk
@@ -10,9 +10,12 @@
 
 {# Breadcrumb #}
 {% set breadcrumb = [{
-  text:"セミナー動画視聴申し込み",
-  link:"#"
-  }] %}
+head:"TOP",
+link:"/"
+},{
+text:"セミナー動画視聴申し込み",
+link:"#"
+}] %}
 
 
 {# Custom tags before </head> #}
