--- a/app/pages/seminar_list/index.njk
+++ b/app/pages/seminar_list/index.njk
@@ -5,7 +5,12 @@
 {% set description = "" %}
 {% set keywords = "" %}
 
-{% set breadcrumb = [{
+{% set breadcrumb = [
+{
+head:"TOP",
+link:"/"
+},
+{
 text:"セミナー（一覧）",
 link:"/seminar_list"
 }] %}
