--- a/app/pages/strength/index.njk
+++ b/app/pages/strength/index.njk
@@ -10,9 +10,12 @@
 
 {# Breadcrumb #}
 {% set breadcrumb = [{
-  text:"クレディセゾンの強み",
-  link:"#"
-  }] %}
+head:"TOP",
+link:"/"
+},{
+text:"クレディセゾンの強み",
+link:"#"
+}] %}
 
 {# Custom tags before </head> #}
 {% block customHead %}{% endblock %}
