--- a/app/pages/contact/index.njk
+++ b/app/pages/contact/index.njk
@@ -10,9 +10,12 @@
 
 {# Breadcrumb #}
 {% set breadcrumb = [{
-  text:"ご相談・お問い合わせ",
-  link:"#"
-  }] %}
+head:"TOP",
+link:"/"
+},{
+text:"ご相談・お問い合わせ",
+link:"#"
+}] %}
 
 
 {# Custom tags before </head> #}
