--- a/app/pages/faq_service_list/index.njk
+++ b/app/pages/faq_service_list/index.njk
@@ -11,6 +11,10 @@
 {# Breadcrumb #}
 {% set breadcrumb = [
   {
+    head:"TOP",
+    link:"/"
+  },
+  {
     text: "よくある質問",
     link: "#"
   }, {
