--- a/app/pages/reduction_expenses/index.njk
+++ b/app/pages/reduction_expenses/index.njk
@@ -11,6 +11,10 @@
 {# Breadcrumb #}
 {% set breadcrumb = [
   {
+    head: "TOP",
+    link: "/"
+  },
+  {
     text: "経費を削減したい",
     link: "#"
   }
