--- a/app/pages/smaller_companies/index.njk
+++ b/app/pages/smaller_companies/index.njk
@@ -11,6 +11,10 @@
 {# Breadcrumb #}
 {% set breadcrumb = [
   {
+    head: "TOP",
+    link: "/"
+  },
+  {
     text: "中小企業向けサービス",
     link: "#"
   }
