--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -11,6 +11,10 @@
 {# Breadcrumb #}
 {% set breadcrumb = [
   {
+    head:"TOP",
+    link:"/"
+  },
+  {
     text: "個人事業主向けサービス",
     link: "#"
   }
