--- a/app/pages/whitepaper/index.njk
+++ b/app/pages/whitepaper/index.njk
@@ -9,9 +9,14 @@
 {% set page = "" %}
 
 {# Breadcrumb #}
-{% set breadcrumb = [{
-  text:"お役立ち資料",
-  link:"#"
+{% set breadcrumb = [
+  {
+    head:"TOP",
+    link:"/"
+  },
+  {
+    text:"お役立ち資料",
+    link:"#"
   }] 
 %}
 
