fix text and modal img

--- a/app/_template/layout/default.njk
+++ b/app/_template/layout/default.njk
@@ -14,7 +14,7 @@
   {# Page content #}
   {%- block content %}
   {% endblock -%}
-  <div id="imageModal" class="modal">
+  <div id="imageModal" class="modal sp-only">
     <span class="close-modal">&times;</span>
     <img class="modal-content" id="image-in-modal">
     <div id="caption"></div>
