--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -78,7 +78,7 @@
         <li class="card">
           <h2>ビジネス規模</h2>
           <div class="grid__card--img"><img src="/assets/img/common/mask-group1.png" alt="work image"></div>
-          <p>ビジネスで利用できるカードは、一般的に個人事業主様向けの「ビジネスカード」と事業者向けの「法人カード」の2つのタイプに分けられます。ビジネス規模に合ったカードを選択することが大切です。</p>
+          <p>ビジネスで利用できるカードは、一般的に個人事業主向けの「ビジネスカード」と事業者向けの「法人カード」の2つのタイプに分けられます。ビジネス規模に合ったカードを選択することが大切です。</p>
         </li>
         <li class="card">
           <h2>利用目的と利用枠</h2>
