fix page business-support

--- a/app/pages/platinum_business/index.njk
+++ b/app/pages/platinum_business/index.njk
@@ -172,7 +172,7 @@ link: "#top"
             入会資格
           </div>
           <div class="col-right">
-            <div class="ttl-quaternary">個人事業主・経営者様をはじめ、安定した収入があり、<br> 社会的信用を有するご連絡可能な方（学生、未成年を除く）</div>
+            <div class="ttl-quaternary">個人事業主・経営者をはじめ、安定した収入があり、<br> 社会的信用を有するご連絡可能な方（学生、未成年を除く）</div>
           </div>
         </div>
       </div>
