--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -125,7 +125,7 @@
 
     <section id="loan-support" class="section-primary fadein">
       <h4 class="ttl-quaternary">セゾンビジネスサポートローンとは</h4>
-      <h2 class="ttl-primary">中小企業・個人事業主にピッタリのサービスです。</h2>
+      <h2 class="ttl-primary">このような中小企業・個人事業主にピッタリのサービスです。</h2>
       <span class="section-primary__description">お持ちのビジネスカードに、<strong>最大950万円のゆとりあるご融資可能枠</strong>とお借り入れ額に応じた<strong>優遇金利</strong>をご用意しております。</span>
       <div class="section-primary__wrapper">
         <div class="containers">
@@ -180,7 +180,7 @@
           </div>
 
           <div class="section-primary__notice">
-            <h4 class="ttl-quaternary">中小企業様・個人事業主様向けのローンサービスです。</h4>
+            <h4 class="ttl-quaternary">中小企業様・個人事業主向けのローンサービスです。</h4>
             <ul class="notice-list">
               <li>
                 {% include 'component/icons/circle-checked.njk' %}
@@ -216,7 +216,7 @@
             <div href="#" class="card">
               <summary class="card__box">
                 <div class="card__box--ttl">今すぐお申し込みをしたい</br>という方はこちら</div>
-                <div><a class="blue_gradient_btn" href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60" target="_blank">審査おお申し込み</a></div>
+                <div><a class="blue_gradient_btn" href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60" target="_blank">審査お申し込み</a></div>
               </summary>
             </div>
           </div>
