fix text in each page

--- a/app/assets/scss/4-pages/_saison_welfare.scss
+++ b/app/assets/scss/4-pages/_saison_welfare.scss
@@ -790,6 +790,12 @@
         .card-solution-content__text {
           font-size: 16px;
           padding-top: 0;
+
+          .link {
+            color: $primary-color;
+            text-decoration: underline;
+            text-underline-offset: 4px;
+          }
         }
       }
 
