--- a/app/pages/business_efficiency/index.njk
+++ b/app/pages/business_efficiency/index.njk
@@ -149,7 +149,7 @@ link: "#"
           </summary>
           <div class="card-type13">
             <dd>
-              セゾンインボイスとは、請求業務の“すべて”を代行するサービスです。顧客情報をご登録いただき、取引情報を誤入力いただくだけで、与信審査、請求書作成・発行、入金確認、督促まですべてクレディセゾンが代行いたします。顧客の与信枠内であれば、その後未払いになったとしても貴社にお振り込みするため、未回収リスクがなくなります。
+              セゾンインボイスとは、請求業務の“すべて”を代行するサービスです。顧客情報をご登録いただき、取引情報をご入力いただくだけで、与信審査、請求書作成・発行、入金確認、督促まですべてクレディセゾンが代行いたします。顧客の与信枠内であれば、その後未払いになったとしても貴社にお振り込みするため、未回収リスクがなくなります。
             </dd>
             <div class="flex gap60 aic sp-reverse">
               <div class="sec-left-wrapper">
@@ -198,7 +198,7 @@ link: "#"
                   <dt class="flex aic gap20 sp-fs">
                     <div class="number-circle">3</div>
                     <h5 class="ttl-senary">
-                      <span class="yellow-bottom">最短翌日の入金</span>で運用資金をスピード確保。
+                      <span class="yellow-bottom">最短翌日の入金</span>で運転資金をスピード確保。
                     </h5>
                   </dt>
                 </dl>
