--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -154,7 +154,7 @@
 
             <div class="card-type13">
               <dd>
-                セゾンビジネスサポートローンは、下記対象のビジネスカードでご利用いただける中小企業・個人事業主様の経営を支援する融資サービスです。お持ちのビジネスカードに、<strong>最大950万円のゆとりあるご融資可能枠と借り入れ額に応じた優遇金利</strong>をご用意しております。カード1枚で用途を問わず、ビジネスのあらゆるシーンで幅広くご利用いただけます。
+                セゾンビジネスサポートローンは、下記対象のビジネスカードでご利用いただける中小企業・個人事業主の経営を支援する融資サービスです。お持ちのビジネスカードに、<strong>最大950万円のゆとりあるご融資可能枠と借り入れ額に応じた優遇金利</strong>をご用意しております。カード1枚で用途を問わず、ビジネスのあらゆるシーンで幅広くご利用いただけます。
               </dd>
 
               <ul class="flex gap30 card-list">
