--- a/app/pages/saison_welfare/index.njk
+++ b/app/pages/saison_welfare/index.njk
@@ -23,31 +23,31 @@ link: "#top"
 },
 {
 text: "セゾンフクリコとは",
-link: "#payment"
+link: "#saison-fukurico"
 },
 {
 text: "セゾンフクリコの特長",
-link: "#flow-of-usage"
+link: "#feature"
 },
 {
 text: "法人向け優待サポート",
-link: "#reason-chosing"
+link: "#preferential"
 },
 {
 text: "ご利用までの流れ",
-link: "#faq"
+link: "#flow-of-usage"
 },
 {
 text: "ご利用料金",
-link: "#material"
+link: "#usage-fee"
 },
 {
 text: "よくある質問",
-link: "#material"
+link: "#faq"
 },
 {
 text: "お申し込み",
-link: "#material"
+link: "#application"
 }
 ] %}
 
@@ -109,7 +109,7 @@ link: "#material"
     </div>
   </section>
 
-  <section id="payment" class="section-primary fadein">
+  <section id="saison-fukurico" class="section-primary fadein">
     <div class="container-1200">
       <h5 class="ttl-notice">セゾンフクリコとは</h5>
       <h1 class="ttl-primary">中小企業のための福利厚生優待サービスです。</h1>
@@ -153,7 +153,7 @@ link: "#material"
               </a>
             </li>
             <li class="card-type6">
-              <a href="#feature3" class="card">
+              <a href="#usage-fee" class="card">
                 <h5 class="ttl-category">初めてでも導入しやすい</h5>
                 <h3 class="ttl-info">料金プラン</h3>
                 <div class="card-image">
@@ -228,7 +228,7 @@ link: "#material"
     </div>
   </section>
 
-  <section id="flow-of-usage" class="section-quaternary fadein">
+  <section id="feature" class="section-quaternary fadein">
     <h5 class="ttl-notice">セゾンフクリコの特長</h5>
     <h1 class="ttl-primary">従業員はもちろん、会社にもうれしい福利厚生サービスです。</h1>
     <div class="container">
@@ -351,7 +351,7 @@ link: "#material"
             <li>導入事業者の方に業務をご負担いただく必要はございません。</li>
           </ul>
         </li>
-        <li id="feature3" class="card-type25">
+        <li id="usage-fee" class="card-type25">
           <div class="card-heading">
             <span class="card-index">特長③</span>
             <h3 class="card-issue-title">初めてでも導入しやすい料金プラン</h3>
@@ -360,14 +360,14 @@ link: "#material"
           <h1 class="card-solution-title">ご利用料金は、<span>月額385円（税込）/1人～</span></h1>
           <ul class="card-solution-content__text">
             <li>お手頃な月会費で、はじめての福利厚生導入でも気軽に利用できる料金プランです。法人向け/個人事業主向けプランをご用意しています。</li>
-            <li> 詳しい料金プランを知りたい方はサービス資料をダウンロードしてご覧ください。</li>
+            <li> 詳しい料金プランを知りたい方は<a href="#" class="link">サービス資料をダウンロード</a>してご覧ください。</li>
           </ul>
         </li>
       </ul>
     </div>
   </section>
 
-  <section id="reason-chosing" class="section-quinary fadein">
+  <section id="preferential" class="section-quinary fadein">
     <div class="ttl-notice">法人向け優待サポート</div>
     <h1 class="ttl-primary">経費削減・業務効率を上げる法人向けのサポートも充実</h1>
 
@@ -493,7 +493,7 @@ link: "#material"
     </div>
   </section>
 
-  <section id="faq" class="section-senary fadein">
+  <section id="flow-of-usage" class="section-senary fadein">
     <div class="container">
       <h5 class="ttl-notice">ご利用までの流れ</h5>
       <h1 class="ttl-primary">ご利用開始までは３ステップのみ。</h1>
@@ -539,7 +539,7 @@ link: "#material"
     </div>
   </section>
 
-  <section id="material" class="section-question-and-answer fadein">
+  <section id="faq" class="section-question-and-answer fadein">
     <div class="container">
       <h5 class="ttl-sub">FAQ</h5>
       <h2 class="ttl-secondary">よくある質問</h2>
@@ -586,7 +586,7 @@ link: "#material"
     </div>
   </section>
 
-  <section class="section-contact fadein">
+  <section id="application" class="section-contact fadein">
     <div class="card-type22">
       <div class="ttl-notice">CONTACT</div>
       <h3 class="ttl-tertiary">セゾンフクリコをご検討中の方へ</h3>
