--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -200,7 +200,7 @@
 
               <div class="arrow"></div>
               <div class="welfare-more-tooltip">
-                <h3 class="welfare-more-tooltip__content">完全アウトソーシング型の福利厚生サービスなので、新たな業務が増える心配はありません。運用は全てお任せください。</h3>
+                <h3 class="welfare-more-tooltip__content">完全アウトソーシング型の福利厚生サービスなので、</br>新たな業務が増える心配はありません。</br>運用は全てお任せください。</h3>
               </div>
             </div>
           </div>
