--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -180,7 +180,7 @@
           </div>
 
           <div class="section-primary__notice">
-            <h4 class="ttl-quaternary">中小企業様・個人事業主向けのローンサービスです。</h4>
+            <h4 class="ttl-quaternary">中小企業・個人事業主向けのローンサービスです。</h4>
             <ul class="notice-list">
               <li>
                 {% include 'component/icons/circle-checked.njk' %}
