--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -423,7 +423,7 @@ link: "#material"
                     支払い.comのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
                   </div>
                 </div>
-              <div><a href="https://shi-harai.com/signup/" target="_blank" class="blue_gradient_btn" href="#">今すぐ無料で登録　に修正</a></div>
+              <div><a href="https://shi-harai.com/signup/" target="_blank" class="blue_gradient_btn" href="#">今すぐ無料で登録</a></div>
             </summary>
           </div>
         </div>
