create concur_expense page

--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -48,8 +48,9 @@ $blue-color-4: #014a58;
 
 $green-color: #007477;
 $green-color-1: #53d2b2;
-$green-color-2: #24A4A4;
-$green-color-3: #58B79D;
+$green-color-2: #24a4a4;
+$green-color-3: #58b79d;
+$green-color-4: #49b4b4;
 
 $gray-color: #f1f1f1;
 $gray-color-2: #a7a7a7;
@@ -62,7 +63,7 @@ $gray-color-8: #797979;
 $gray-color-9: #f5f5f5;
 
 $yellow-color: #ffff01;
-$yellow-color-1: #EDF8E5;
+$yellow-color-1: #edf8e5;
 
 // テキストカラー
 
