--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -791,7 +791,7 @@
         <div class="ttl-notice">CONTACT</div>
         <h3 class="ttl-tertiary">「今すぐ相談したい」という方へ</h3>
 
-        <div class="ttl-tertiary small">当社のサポート担当がご利用用途やご要望をお伺い　に修正<br> お客様にピッタリのカードをご提案いたします。お気軽にご相談ください。</div>
+        <div class="ttl-tertiary small">当社のサポート担当がご利用用途やご要望をお伺いさせていただき、<br> お客様にピッタリのカードをご提案いたします。お気軽にご相談ください。</div>
 
         <div class="quinary-btn">
           <a href="/contact" class="blue_gradient_btn">サポート担当に無料で相談する</a>
