fix text in home page

--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -577,10 +577,9 @@
               <summary class="card__box">
                 <div class="card__box--ttl">ご相談・お問い合わせはこちら</div>
                 <div class="card__box--txt">各種ソリューションに関するお問合せは
-                  <br>
-                  サービス資料をダウンロードいただけます。
+                  <br/>お気軽にお問い合わせください。
                 </div>
-                <div><a class="blue_gradient_btn" href="/contact/">お気軽にお問い合わせください。</a></div>
+                <div><a class="blue_gradient_btn" href="/contact/">ご相談・お問い合わせ</a></div>
               </summary>
             </div>
           </div>
