--- a/app/assets/scss/3-modules/_top-header.scss
+++ b/app/assets/scss/3-modules/_top-header.scss
@@ -131,7 +131,7 @@ header {
       }
       .bondi_blue_outline_btn {
         max-width: 200px;
-        padding: 12px 23px;
+        padding: 12px 23px !important;
         color: $blue-color;
         font-size: 16px;
         font-weight: lighter;
