--- a/app/_template/partial/footer.njk
+++ b/app/_template/partial/footer.njk
@@ -138,7 +138,7 @@
         </li>
 
         <li>
-          <a href="https://www.saisoncard.co.jp/privacy.html" target="_blank">
+          <a href="https://www.saisoncard.co.jp/info/legal/" target="_blank">
             「個人情報の保護に関する法律」に基づく公表事項
             {% include 'component/icons/external.njk' %}
           </a>
