--- a/app/pages/strength/index.njk
+++ b/app/pages/strength/index.njk
@@ -94,28 +94,28 @@
           <div class="containers">
             <ul class="flex gap30 inherit anc__box">
               <li>
-                <a href="#" class="anc__box_image_1">
+                <a href="/business_card_creation/" class="anc__box_image_1">
                   <span>ビジネスカードを作りたい</span>
                 </a>
               </li>
               <li>
-                <a href="#" class="anc__box_image_2">
+                <a href="/reduction_expenses/" class="anc__box_image_2">
                   <span>経費を削減したい</span>
                 </a>
               </li>
               <li>
-                <a href="#" class="anc__box_image_3">
+                <a href="/business_efficiency" class="anc__box_image_3">
                   <span>業務を効率化したい</span>
                 </a>
               </li>
               <li>
-                <a href="#" class="anc__box_image_4">
+                <a href="/improve_cash_flow/" class="anc__box_image_4">
                   <span>資金繰りを改善したい</span>
                 </a>
               </li>
               <li>
-                <a href="#" class="anc__box_image_5">
-                  <span>資金繰りを改善したい</span>
+                <a href="/welfare/" class="anc__box_image_5">
+                  <span>福利厚生を充実させたい</span>
                 </a>
               </li>
             </ul>
