--- a/app/assets/scss/4-pages/_faq_service_list.scss
+++ b/app/assets/scss/4-pages/_faq_service_list.scss
@@ -15,7 +15,7 @@
 
     .ttl-primary {
       font-size: 42px;
-      margin-bottom: 16px;
+      margin-bottom: 0;
       line-height: 1.3;
 
       @media #{$sp} {
