--- a/app/assets/scss/4-pages/_business_pro.scss
+++ b/app/assets/scss/4-pages/_business_pro.scss
@@ -37,6 +37,13 @@
       }
     }
 
+    &.purchasing_card {
+      background-image: url("/assets/img/purchasing_card/purchasing_card_banner.png");
+      .banner-containers .banner-left .ttl-primary {
+        font-size: 39px;
+      }
+    }
+
     .containers {
       padding-right: 0;
       padding-left: 0;
@@ -131,13 +138,14 @@
 
           &__options {
             margin-top: 10px;
-            display: flex;
+            display: grid;
+            grid-template-columns: auto 40px auto;
             align-items: center;
             text-align: center;
             gap: 10px;
 
             @media #{$sp} {
-              flex-direction: column;
+              grid-template-columns: auto;
             }
 
             .option {
@@ -146,6 +154,10 @@
               padding: 10px 15px;
               white-space: nowrap;
               font-size: 17px;
+              line-height: 22px;
+              height: 100%;
+              display: flex;
+              align-items: center;
 
               &::before {
                 position: absolute;
@@ -161,7 +173,8 @@
               }
 
               @media #{$sp} {
-                width: 70%;
+                width: 100%;
+                justify-content: center;
               }
             }
           }
@@ -246,6 +259,7 @@
       .card {
         box-shadow: 0px 3px 20px #00000029;
         border-radius: 3px;
+        height: fit-content;
 
         &.or {
           position: relative;
@@ -256,7 +270,7 @@
             top: 50%;
             right: -70px;
             font-family: "Futura";
-            font-weight: bold;
+            font-weight: 500;
             font-size: 32px;
 
             @media #{$sp} {
@@ -280,9 +294,11 @@
           justify-content: center;
           align-items: center;
           font-size: 25px;
+          line-height: 40px;
           font-weight: bold;
           flex-direction: column;
-          height: 185px;
+          height: 144px;
+          text-align: center;
 
           @media #{$sp} {
             padding: 0 15px;
@@ -296,6 +312,7 @@
           }
           .percent {
             font-size: 42px;
+            font-weight: 500;
           }
         }
       }
@@ -442,8 +459,10 @@
       }
       .col-right {
         background: #ffffff 0% 0% no-repeat padding-box;
-        padding: 30px;
+        padding: 20px 30px;
         height: 100px;
+        display: grid;
+        align-items: center;
 
         @media #{$sp} {
           padding: 15px;
