--- a/app/pages/gold_business_pro/index.njk
+++ b/app/pages/gold_business_pro/index.njk
@@ -17,7 +17,7 @@
 {# Breadcrumb #}
 {% set breadcrumb = [
 {
-text: "セゾンプラチナ・ビジネス プロ・アメリカン・エキスプレス®・カード",
+text: "セゾンゴールド・ビジネスプロ・カード",
 link: "#"
 }
 ] %}
@@ -54,9 +54,9 @@ link: "#top"
 {% block content %}
 {% include 'partial/sidebar.njk' %}
 <main class="business_pro-page">
-  <section id="top" class="section-welcome platinum fadein">
+  <section id="top" class="section-welcome gold fadein">
     <div class="containers">
-      <div class="banner-containers">
+      <div class="banner-containers gold">
         <div class="banner-left">
           <div class="title-notice">
             <h3 class="title-content">
@@ -65,18 +65,18 @@ link: "#top"
             </h3>
           </div>
           <h1 class="ttl-primary">
-            セゾンプラチナ・ビジネス プロ・<br> アメリカン・エキスプレス®・カード
+          セゾンゴールド・ビジネス <br> プロ・カード
           </h1>
 
           <div class="card-contents">
             <div class="card-img">
-              <img src="/assets/img/credit_cards/saison-03.png" alt="Your Image" class="credit-card-img">
+              <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="credit-card-img">
             </div>
             <div class="card-description">
               <span>選べる機能で中小企業様の経営をサポート</span>
               <div class="card-description__options">
                 <div class="option">
-                  <span>1％<br />
+                  <span>0.5％<br />
                     のキャッシュバック
                   </span>
                 </div>
@@ -98,8 +98,8 @@ link: "#top"
 
         </div>
         <div class="banner-right pc-only">
-          その挑戦に、
-          <br /> 即戦力を
+         ビジネスに
+          <br /> さらなる安心を
         </div>
       </div>
     </div>
@@ -114,10 +114,10 @@ link: "#top"
           <a class="card or">
             <div class="card-head">キッシュバックサービス</div>
             <div class="card-content">
-              <div>支払い金額の<span class="percent blue-text">1％</span>をキャッシュバック</div>
+              <div>支払い金額の<span class="percent blue-text">0.5％</span>をキャッシュバック</div>
             </div>
           </a>
-          <p class="card-description">カードでお支払いするだけで、毎日の業務にかかわる費用はもちろん、公共料金や税金の支払い、広告費や資材購入費など経費の支払いが自動的にキャッシュバックされます。
+          <p class="card-description">カードでお支払いいただくだけで、毎日の業務にかかわる費用はもちろん、公共料金や税金の支払い、広告費や資材購入費など経費の支払いが自動的にキャッシュバックされます。
           </p>
         </div>
         <div class="card-item">
@@ -132,7 +132,7 @@ link: "#top"
         </div>
       </div>
 
-      <p class="card-note">※「1％のキャッシュバック」と「最長84日間の支払いサイトのサービス」はご選択型のサービスです。</p>
+      <p class="card-note">※「0.5％のキャッシュバック」と「最長84日間の支払いサイトのサービス」はご選択型のサービスです。</p>
     </div>
   </section>
 
@@ -185,7 +185,7 @@ link: "#top"
             年会費
           </div>
           <div class="col-right">
-            <div class="ttl-quaternary">27,500円（税込）   追加カード年会費：3,300円（税込）</div>
+            <div class="ttl-quaternary">3,300円（税込）   追加カード年会費：1,100円（税込）</div>
             <div class="ttl-quaternary normal-text">年会費は会計上経費として計上可能です。詳しくは税理士等にご確認ください。</div>
           </div>
         </div>
@@ -223,38 +223,15 @@ link: "#top"
           <div class="card-content">
             <h4 class="ttl-quaternary">海外空港ラウンジ</h4>
             <div class="ttl-normal">
-              148以上の国や地域、1,300ヵ所以上の空港ラウンジをご利用いただける「プライオリティ・パス（通常年会費469米ドル／プレステージ会員）」に、代表者様カード限定の特別なサービスとして無料でご登録いただけます※1。
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-img">
-            <img src="/assets/img/common/plat2.png" alt="work image">
-          </div>
-          <div class="card-content">
-            <h4 class="ttl-quaternary">プラチナ会員専用コールセンター</h4>
-            <div class="ttl-normal">出張の手配や会食の設定などは、専用のコールセンターへ。<br> 24時間365日、専任のスタッフが誠心誠意お応えします。</div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-img">
-            <img src="/assets/img/common/plat1.png" alt="work image">
-          </div>
-          <div class="card-content">
-            <h4 class="ttl-quaternary">従業員も対象の旅行傷害保険</h4>
-            <div class="ttl-normal">
-              海外・国内の旅行中の事故について補償いたします。海外旅行中の事故について最高１億円※2まで、国内旅行中の事故について最高5,000万円※3まで補償いたします。
+              148以上の国や地域、1,300ヵ所以上の空港ラウンジをご利用いただける「プライオリティ・パス（通常年会費469米ドル／プレステージ会員）」に、代表者様カード限定の特別なサービスとして無料でご登録いただけます。
             </div>
           </div>
         </div>
       </div>
 
       <div class="sub-content">
-        ※1 別途「プライオリティ・パス」へのご登録が必要です。<br>
-        ※2 海外旅行傷害保険の死亡・後遺障害保険金額。事前のカード決済等の条件により適用される金額です。決済等がない場合は最高5,000万円となります。 <br>
-        ※3 国内旅行傷害保険の死亡・後遺障害保険金額
+        ※1 海外・国内旅行傷害保険の死亡・後遺障害保険金額<br>
+        ※2 国内旅行傷害保険は事前のカード決済等の条件がございます。
       </div>
     </div>
   </section>
@@ -272,7 +249,7 @@ link: "#top"
         <div class="content-detail">
           <div class="content-head">ビジネスカードのメリットを使い倒すためのオトクな活用方法をまるっと紹介！</div>
           <p>
-            ビジネスカードが役立つ場面はたくさんありますが、多くの場合においてそのメリットや特典を使いこなしていないケースもあります。本資料では、ビジネスカードのメリットや特典を使い倒すために具体的な使い方や活用シーンを紹介しています。これからビジネスカードを利用したいという方は参考にしてみてください。
+            ビジネスカードが役立つシーンは多々ありますが、そのメリットや特典を使いこなせている人はそう多くありません。本資料では、ビジネスカードのメリットや特典を徹底的に使いこなすためのヒントや、具体的な活用シーンを紹介しています。これからビジネスカードを導入したいという方はぜひ本資料をご活用ください。
           </p>
         </div>
       </div>
@@ -400,7 +377,7 @@ link: "#top"
         </div>
         <div class="card-row three card-row-5">
           <div class="title-col">
-            <div>追加カード <br> 年会費</div>
+            <div>カード <br> 発行枚数</div>
           </div>
           <div class="first-column">
             <div class="content-col height-80">
@@ -438,14 +415,14 @@ link: "#top"
           <div class="second-column">
             <div class="content-col height-80">
               <div class="normal-text">
-                個人事業主またはフリーランス、経営者の方（高校生除く）
+                中小規模法人代表者（未成年者除く）
               </div>
             </div>
           </div>
           <div class="third-column">
             <div class="content-col height-80">
               <div class="normal-text">
-                個人事業主またはフリーランス、経営者の方（高校生除く）
+                中小規模法人代表者（未成年者除く）
               </div>
             </div>
           </div>
@@ -455,22 +432,22 @@ link: "#top"
             <div>MORE</div>
           </div>
           <div class="first-column">
-            <div class="content-col ">
+            <div class="content-col direction-col aiS">
               <ul>
                 <li>プラチナ会員専用デスク</li>
                 <li>AMEXセンチュリオンデザイン採用</li>
                 <li>通常429米ドルのプライオリティパスを代表者様は無料でご登録可能</li>
               </ul>
-            </div>
-          </div>
-          <div class="second-column">
-            <div class="content-col direction-col aiS">
-              <ul>
-                <li>国内ラウンジサービス</li>
-              </ul>
               <a href="#" class="bondi_blue_outline_btn">
                 <span class="bondi_blue_outline_btn__tittle">詳細はこちら</span>
               </a>
+            </div>
+          </div>
+          <div class="second-column">
+            <div class="content-col direction-col">
+              <ul>
+                <li>国内ラウンジサービス</li>
+              </ul>
             </div>
           </div>
           <div class="third-column">
