--- a/app/pages/purchasing_card/index.njk
+++ b/app/pages/purchasing_card/index.njk
@@ -17,7 +17,7 @@
 {# Breadcrumb #}
 {% set breadcrumb = [
 {
-text: "セゾンプラチナ・ビジネス プロ・アメリカン・エキスプレス®・カード",
+text: "セゾンゴールド・ビジネスプロ・カード",
 link: "#"
 }
 ] %}
@@ -34,19 +34,19 @@ link: "#additional-services"
 },
 {
 text: "カード比較",
-link: "#usage"
-},
-{
-text: "よくある質問",
 link: "#card-comparison"
 },
 {
-text: "お申し込みまでの流れ",
+text: "よくある質問",
 link: "#faq"
 },
 {
-text: "お申し込み",
+text: "お申し込みまでの流れ",
 link: "#application-flow"
+},
+{
+text: "お申し込み",
+link: "#top"
 }
 ] %}
 
